# agent-parity

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
agent_parity/: __init__.py  cli.py  config.py  db.py  models.py  os_eol.py  os_eol_data.json  persistence.py  pipeline.py  rest_adapter.py  storage.py  tasks.py
agent_parity/ad_sync/: Export-ADDevices.ps1  parser.py
agent_parity/connectors/: __init__.py  base.py  bitdefender.py  carbonblack.py  sentinelone.py
agent_parity/correlation/: engine.py
agent_parity/deployment/: script_runner.py
agent_parity/reporting/: splunk_export.py
agent_parity_web/: manage.py
agent_parity_web/config/: __init__.py  celery.py  wsgi.py
agent_parity_web/config/settings/: base.py  development.py  production.py
agent_parity_web/dashboard/: admin.py  config_db.py  fields.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py  views_setup.py
agent_parity_web/dashboard/management/commands/: import_config.py  seed_demo.py  smoke_check_celery.py  smoke_check_storage.py  sync_and_correlate.py
agent_parity_web/dashboard/migrations/: 0001_initial.py  0002_coveragesnapshot_machine_type_and_more.py  0003_coveragesnapshot_eol_status_and_more.py  0004_client_ad_target_device_client_sync_interval_hours_and_more.py  0005_remove_client_ad_target_device_and_more.py  0006_remove_vendorcredential_uniq_per_client_vendor_credential_and_more.py  0007_remove_vendorcredential_uniq_global_vendor_credential_and_more.py
agent_parity_web/dashboard/templates/dashboard/: device_detail.html  device_list.html  overview.html
agent_parity_web/dashboard/templates/dashboard/setup/: client_form.html  import.html  (+3 more)
agent_parity_web/templates/: base.html
docker/: Dockerfile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  smoke_check_celery.py  smoke_check_storage.py  smoke_test.sh
sample_data/: ad_export_ACME-BR-DC01.csv  sentinelone_inventory.json
sample_data/acme/: ad_export.csv  bitdefender_inventory.json  carbonblack_inventory.json  carbonblack_inventory_branch.json  sentinelone_inventory.json
sample_data/globex/: ad_export.csv  ad_export_GLOBEX-BR-DC01.csv  ad_export_GLOBEX-DC01.csv  bitdefender_inventory.json  sentinelone_inventory.json
scripts/: check_eol_drift.py
src/agent_parity/: ad_export.py  agent_csv.py  celery_app.py  cli.py  config.py  correlation.py  db.py  models.py  os_eol.py  os_eol_builds_data.json  persistence.py  pipeline.py  script_runner.py  splunk_export.py  tasks.py
src/agent_parity/ad_sync/: parser.py
src/agent_parity/connectors/: __init__.py  base.py  carbonblack.py  sentinelone.py
src/agent_parity/deployment/: script_runner.py
src/agent_parity/scheduling/: celery_app.py  db.py  persistence.py  tasks.py
src/agent_parity/scripts/: Export-ADDevices.ps1
tests/: conftest.py  test_ad_export.py  test_admin.py  test_agent_csv.py  test_cli.py  test_config.py  test_config_db.py  test_config_simple.py  test_connectors.py  test_correlation.py  test_dashboard_models.py  test_db.py  test_fields.py  test_models.py  test_os_eol.py  test_parser.py  test_persistence.py  test_pipeline.py  test_pipeline_sync.py  test_rest_adapter.py  test_script_runner.py  test_services.py  test_setup_views.py  test_splunk_export.py  test_storage.py  test_tasks.py  test_views.py
tests/scheduling/: test_persistence.py
