[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-parity"
version = "0.1.0"
description = "Device coverage reconciliation: correlate an AD computer inventory against EDR agent inventories (SentinelOne, Carbon Black, BitDefender) to find missing, orphaned, and stale agent coverage."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "requests>=2.32",
    "certifi>=2024.7.4",
    "urllib3>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "py-shared-tools[storage]",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "moto[s3]>=5.0",
    "pandas-stubs~=3.0.3",
    "boto3-stubs~=1.43.40",
]

[tool.uv.sources]
py-shared-tools = { git = "https://github.com/chingdrop/py-shared-tools", rev = "v1.0.0" }

[project.scripts]
agent-parity = "agent_parity.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
