[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-parity"
version = "1.1.0"
description = "Device coverage reconciliation: correlate an AD computer inventory against EDR agent inventories (SentinelOne, Carbon Black, BitDefender) to find missing, orphaned, and stale agent coverage."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "requests>=2.32",
    "certifi>=2024.7.4",
    "urllib3>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "py-shared-tools[storage]",
    "sqlalchemy>=2.0",
    "celery[redis]>=5.4",
]

[project.urls]
Repository = "https://github.com/chingdrop/agent-parity"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "moto[s3]>=5.0",
    "pandas-stubs~=3.0.3",
    "boto3-stubs~=1.43.40",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml",
    "pre-commit>=4.0",
]

[tool.uv.sources]
py-shared-tools = { git = "https://github.com/chingdrop/py-shared-tools", rev = "v1.2.0" }

[project.scripts]
agent-parity = "agent_parity.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_parity"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # long CSV/fixture literals in triple-quoted strings

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["celery.*", "shared_tools.*"]
ignore_missing_imports = true
